--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ target/
 /src/main/java/com/todocine/configuration/Constants.java
 /src/main/resources/application-dev.properties
 /src/main/resources/application-prod.properties
+/src/main/resources/application-test.properties
 
 ### STS ###
 .apt_generated
