--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.16.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 	<profiles>
 		<profile>
 			<id>prod</id>
